src/main/kotlin/com/example/hhplusweek3/error/BadRequestException.kt
package com.example.hhplusweek3.error

open class BadRequestException(message: String) : RuntimeException(message)